[tool.poetry]
name = "rustrocket_x"
version = "0.1.0"
description = "Lightweight Python package for X/Twitter API analytics (Free Plan)"
authors = ["Vortex Team"]
readme = "README.md"
packages = [{include = "rustrocket_x"}]

[tool.poetry.dependencies]
python = ">=3.13"
typer = ">=0.12"
pydantic-settings = ">=0.3"
requests = ">=2.32"
rich = ">=13.7"
python-dotenv = ">=1.0"
requests-oauthlib = ">=1.3.0"
python-frontmatter = ">=1.0.0"
markdown = ">=3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
black = "*"
ruff = "*"
pytest-httpx = ">=0.21.0"

[tool.poetry.scripts]
rrx = "rustrocket_x.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "A", "C", "Q"] 